--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>In the Box</title>
-    <meta name="description" content="In the Box - ChintanDiwakar" />
+    <title>BoxAimBoost</title>
+    <meta
+      name="description"
+      content="The gaming industry has grown too much exponentially in the past few years. BoxAimBooster(BAB) will help you improve your gaming reflexes. Modern games such as Valorant and CS:GO requires a way much better aim these days. Imagine a 10 year old kid giving a headshot?"
+    />
     <meta name="author" content="ChintanDiwakar" />
+    <meta name="keywords" content="BoxAimBooster, Aim boosting valorant" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link
@@ -26,6 +30,10 @@
         <p class="name">Chintan Diwakar</p>
 
     </div> -->
+    <div class="loader-box">
+      <div class="loader"></div>
+      <h4 id="loading-msg">Its not FPS issue, you're a noob.</h4>
+    </div>
 
     <section class="main">
       <div class="head-section">
@@ -47,6 +55,47 @@
           <p id="targetmissed"></p>
         </div>
       </div>
+      <div class="head-section">
+        <h4 class="infoheader">BOX AIM BOOSTER</h4>
+        <h3></h3>
+
+        <div class="text">
+          <div style="width: 100%"><b> Introduction</b></div>
+
+          The gaming industry has grown too much exponentially in the past few
+          years. BoxAimBooster(BAB) will help you improve your gaming reflexes.
+          Modern games such as Valorant and CS:GO requires a way much better aim
+          these days. Imagine a 10 year old kid giving a headshot?
+          <br />
+          <!-- <hr> -->
+          <div style="width: 100%; margin-top: 10px">
+            <b> Why use BoxAimBooster (BAB) ?</b>
+          </div>
+
+          Using BRB before playing any FPS game will imporve your aim
+          marginally. Also people who lack a bit of concentration can also use
+          this game to improve their focus. Programmers or coders can also use
+          this app to increase their productivity speed marginally. They can
+          improve their clicking speed. This is not the only think in BAB. There
+          will be multiple modes coming in our app. A Valorant based tool will
+          also be available.
+          <div style="width: 100%; margin-top: 10px">
+            <b> Future Updates</b>
+          </div>
+          Next update of this app will be included in the most important core
+          feature of this application. Some special modes will be created
+          related to specfic games. Those will be game changers for the gaming
+          community as each and every gaming person can come and improve some or
+          the other skill in the game. Next update will contain more interesting
+          tools thats can be used by gamerz accross a variety of games.
+        </div>
+      </div>
+    </section>
+    <!-- <section class="main"></section> -->
+    <section class="footer">
+      <a style="color: black" href="https://chintandiwakar.github.io/portfolio/"
+        >Made by - Chintan Diwakar</a
+      >
     </section>
     <!-- Logic for adding Kill Effect above -->
     <!-- <div style="margin-left: 100px" class="temp" style="background-color: red">
